# InputActions

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  flake.nix  hyprpm.toml  install.sh  package.nix
src/: CMakeLists.txt
src/common/: ansi-escape-codes.h
src/ctl/: CMakeLists.txt  main.cpp
src/hyprland/: CMakeLists.txt  Plugin.cpp  Plugin.h  README.md  main.cpp
src/hyprland/input/: HyprlandInputBackend.cpp  HyprlandInputBackend.h  HyprlandInputDevice.cpp  HyprlandInputDevice.h  HyprlandVirtualKeyboard.cpp  HyprlandVirtualKeyboard.h  HyprlandVirtualMouse.cpp  HyprlandVirtualMouse.h
src/hyprland/interfaces/: HyprlandInputEmitter.cpp  HyprlandInputEmitter.h  HyprlandOnScreenMessageManager.cpp  HyprlandOnScreenMessageManager.h  HyprlandPointer.cpp  HyprlandPointer.h  HyprlandSessionLock.cpp  HyprlandSessionLock.h  HyprlandWindow.cpp  HyprlandWindow.h  HyprlandWindowProvider.cpp  HyprlandWindowProvider.h
src/hyprland/utils/: HyprlandFunctionHook.cpp  HyprlandFunctionHook.h
src/kwin/: CMakeLists.txt  DBusInterface.cpp  DBusInterface.h  Effect.cpp  Effect.h  README.md  dbusinterface.cpp  dbusinterface.h  effect.cpp  globals.h  kwinwindow.cpp  kwinwindow.h  main.cpp  metadata.json  textinput.h  utils.h
src/kwin/input/: KWinInputBackend.cpp  KWinInputBackend.h  KWinInputDevice.cpp  KWinInputDevice.h  KWinKeyboard.cpp  KWinKeyboard.h  KWinVirtualKeyboard.cpp  KWinVirtualKeyboard.h  KWinVirtualMouse.cpp  KWinVirtualMouse.h  backend.cpp  backend.h  emitter.cpp  emitter.h  keyboard.cpp  keyboard.h  pointer.cpp  pointer.h
src/kwin/interfaces/: KWinInputEmitter.cpp  KWinInputEmitter.h  KWinOnScreenMessageManager.cpp  KWinOnScreenMessageManager.h  KWinPointer.cpp  KWinPointer.h  KWinSessionLock.cpp  KWinSessionLock.h  KWinSessionLock.hpp  KWinWindow.cpp  KWinWindow.h  KWinWindow.hpp  KWinWindowProvider.cpp  KWinWindowProvider.h  KWinWindowProvider.hpp
src/kwin/kcm/: CMakeLists.txt  about.html  kcm.cpp  kcm.h  kcm.ui
src/libinputactions/: Config.cpp  Config.h  DBusInterface.cpp  DBusInterface.h  Expression.cpp  Expression.h  InputActions.cpp  InputActions.h  InputActionsMain.cpp  InputActionsMain.h  InterpolatedString.cpp  InterpolatedString.h  README.md  Range.cpp  Range.h  Resettable.h  Value.cpp  Value.h  expression.cpp  expression.h  globals.cpp  globals.h  range.cpp  range.h  value.cpp  value.h  variable.cpp  variable.h  window.cpp  window.h  yaml_convert.h
src/libinputactions/actions/: Action.cpp  Action.h  ActionExecutor.cpp  ActionExecutor.h  ActionGroup.cpp  ActionGroup.h  CommandAction.cpp  CommandAction.h  CommandTriggerAction.cpp  CommandTriggerAction.h  CustomAction.cpp  CustomAction.h  InputAction.cpp  InputAction.h  InputTriggerAction.cpp  InputTriggerAction.h  OneTriggerActionGroup.cpp  OneTriggerActionGroup.h  PlasmaGlobalShortcutAction.cpp  PlasmaGlobalShortcutAction.h  PlasmaGlobalShortcutTriggerAction.cpp  PlasmaGlobalShortcutTriggerAction.h  SleepAction.cpp  SleepAction.h  TriggerAction.cpp  TriggerAction.h  TriggerActionGroup.cpp  TriggerActionGroup.h  command.cpp  command.h  input.cpp
src/libinputactions/conditions/: CallbackCondition.cpp  CallbackCondition.h  Condition.cpp  Condition.h  ConditionGroup.cpp  ConditionGroup.h  CustomCondition.cpp  CustomCondition.h  LazyCondition.cpp  LazyCondition.h  VariableCondition.cpp  VariableCondition.h  callbackcondition.cpp  callbackcondition.h  condition.cpp  condition.h  conditiongroup.cpp  conditiongroup.h  legacycondition.cpp  variable.cpp  variable.h
src/libinputactions/config/: Config.cpp  Config.h  ConfigIssue.cpp  ConfigIssue.h  ConfigIssueManager.cpp  ConfigIssueManager.h  ConfigLoader.cpp  ConfigLoader.h  GlobalConfig.cpp  GlobalConfig.h  Node.cpp  Node.h  TextPosition.cpp  TextPosition.h  UnusedNodePropertyTracker.cpp  UnusedNodePropertyTracker.h  yaml.h
src/libinputactions/dbus/: DBusInterfaceBase.cpp  DBusInterfaceBase.h  IntegratedDBusInterface.cpp  IntegratedDBusInterface.h
src/libinputactions/handlers/: InputTriggerHandler.cpp  InputTriggerHandler.h  KeyboardTriggerHandler.cpp  KeyboardTriggerHandler.h  MotionTriggerHandler.cpp  MotionTriggerHandler.h  MouseTriggerHandler.cpp  MouseTriggerHandler.h  MultiTouchMotionTriggerHandler.cpp  MultiTouchMotionTriggerHandler.h  PointerTriggerHandler.cpp  PointerTriggerHandler.h  TouchpadTriggerHandler.cpp  TouchpadTriggerHandler.h  TouchscreenTriggerHandler.cpp  TouchscreenTriggerHandler.h  TriggerHandler.cpp  TriggerHandler.h  motion.cpp  motion.h  mouse.cpp  mouse.h  multitouchmotion.cpp  touchpad.cpp  touchpad.h  trigger.cpp  trigger.h
src/libinputactions/helpers/: Copyable.h  Math.cpp  Math.h  QString.cpp  QString.h  QThread.cpp  QThread.h  QVariant.cpp  QVariant.h  Session.cpp  Session.h
src/libinputactions/input/: Delta.cpp  Delta.h  InputDevice.cpp  InputDevice.h  InputDeviceRule.cpp  InputDeviceRule.h  InputEmitter.cpp  InputEmitter.h  InputEventHandler.cpp  InputEventHandler.h  Keyboard.cpp  Keyboard.h  KeyboardKey.cpp  KeyboardKey.h  MouseButton.cpp  MouseButton.h  StrokeRecorder.cpp  StrokeRecorder.h  backend.cpp  backend.h  device.cpp  device.h  emitter.cpp  emitter.h  events.cpp  events.h  handler.cpp  handler.h  keyboard.cpp  keyboard.h  pointer.cpp  pointer.h
src/libinputactions/interfaces/: ConfigProvider.cpp  ConfigProvider.h  CursorShapeProvider.cpp  CursorShapeProvider.h  InputEmitter.cpp  InputEmitter.h  NotificationManager.cpp  NotificationManager.h  OnScreenMessageManager.cpp  OnScreenMessageManager.h  PlasmaGlobalShortcutInvoker.h  PointerPositionGetter.cpp  PointerPositionGetter.h  PointerPositionSetter.cpp  PointerPositionSetter.h  ProcessRunner.cpp  ProcessRunner.h  SessionLock.cpp  SessionLock.h  Window.cpp  Window.h  WindowProvider.cpp  WindowProvider.h
src/libinputactions/ipc/: JsonSerializer.cpp  JsonSerializer.h  MessageHandler.cpp  MessageHandler.h  MessageSocketConnection.cpp  MessageSocketConnection.h  (+2 more)
src/standalone/: CMakeLists.txt  README.md  main.cpp  resources.qrc
tests/libinputactions/: CMakeLists.txt  Test.cpp  Test.h  TestRange.cpp  TestRange.h  TestValue.cpp  TestValue.h  utils.cpp  utils.h
(+294 files in other folders)
