cmake_minimum_required(VERSION 3.16.0)

project(inputactions)
set(PROJECT_VERSION "1.0.0")

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

option(INPUTACTIONS_BUILD_CTL "Build the control tool" OFF)
option(INPUTACTIONS_BUILD_HYPRLAND "Build the Hyprland plugin" OFF)
option(INPUTACTIONS_BUILD_KWIN "Build the KWin plugin" OFF)
option(INPUTACTIONS_BUILD_STANDALONE "Build the standalone version" OFF)

if (INPUTACTIONS_BUILD_CTL)
    add_subdirectory(ctl)
endif()
if (INPUTACTIONS_BUILD_HYPRLAND)
    add_subdirectory(hyprland)
endif()
if (INPUTACTIONS_BUILD_KWIN)
    add_subdirectory(kwin)
endif()
if (INPUTACTIONS_BUILD_STANDALONE)
    add_subdirectory(standalone)
endif()